# M.A.Z.

./: Cargo.toml  README.md
auth/: Cargo.toml
auth/src/: key.rs  lib.rs
desktop/: Cargo.toml
desktop/src/: app.rs  local.rs  main.rs
maz-auth/: Cargo.toml  build.rs  locker.capnp
maz-auth/src/: key.rs  lib.rs  locker.rs
