[package]
name = "maz-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
libhelium = "0.2.0"
relm4 = "0.8.1"
totp-rs = { version = "5.5.1", features = ["otpauth"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
