[package]
name = "maz-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
libhelium = "0.2.0"
relm4 = "0.8.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
maz-auth = { path = "../auth", version = "0.1.0" }
homedir = "0.2.1"
lazy_static = "1.4.0"
cocoon = "0.4.1"
keyring = "2.3.3"
thiserror = "1.0.61"
