[package]
name = "maz-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.19.5"
cocoon = "0.4.1"
totp-rs = { version = "5.5.1", features = ["otpauth"] }

[build-dependencies]
capnpc = "0.19.0"
